...
                },
            )
        }
    )

    Scaffold(
        modifier = Modifier.testTag("screen_accounts"),
        topBar = {
            TopAppBar(
                title = {
                    Text(text = stringResource(Res.string.accounts_title))
                },
                colors = TopAppBarDefaults.topAppBarColors(
...
