package com.neoutils.finsight.ui.modal.accountForm

object AccountFormTestTags {
    const val NAME = "account-form-name"
    const val SUBMIT = "account-form-submit"
}
