package com.neoutils.finsight.ui.modal.editAccountBalance

object EditAccountBalanceTestTags {
    const val AMOUNT = "adjustment-amount"
    const val SUBMIT = "adjustment-submit"
}
