package com.neoutils.finsight.ui.modal.transactionForm

object TransactionFormTestTags {
    const val TYPE_EXPENSE = "transaction-form-type-expense"
    const val TYPE_INCOME = "transaction-form-type-income"
    const val TITLE = "transaction-form-title"
    const val ACCOUNT = "transaction-form-account"
    const val CATEGORY = "transaction-form-category"
    const val AMOUNT = "transaction-form-amount"
    const val DATE = "transaction-form-date"
    const val SUBMIT = "transaction-form-submit"
    const val TARGET = "transaction-form-target"
    const val TARGET_ACCOUNT = "transaction-form-target-account"
    const val TARGET_CREDIT_CARD = "transaction-form-target-credit-card"
    const val CREDIT_CARD = "transaction-form-credit-card"
}
