package com.neoutils.finsight.ui.modal.viewTransaction

object ViewOperationTestTags {
    const val EDIT = "view-transaction-edit"
    const val DELETE = "view-transaction-delete"
}
